BookingServiceImpl code added and email service added